--- a/AdminLTE-custom/pipeline_v2.html
+++ b/AdminLTE-custom/pipeline_v2.html
@@ -1197,7 +1197,7 @@
 		            </div>
 		            <div class="form-group">
 		                <div class="input-group">
-		                	<span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+		                	<span class="input-group-addon"><i class="fa fa-clock-o"></i></span>
 		                	<input type="date" class="form-control">
 		                </div>
 		            </div>
