update tach file css

--- a/AdminLTE-custom/pipeline_v2.html
+++ b/AdminLTE-custom/pipeline_v2.html
@@ -9,8 +9,12 @@
 	<link rel="stylesheet" href="public/template_admin/libs/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="public/template_admin/libs/Ionicons/css/ionicons.min.css">
 	<link rel="stylesheet" href="public/template_admin/libs/jvectormap/jquery-jvectormap.css">
-	<link rel="stylesheet" href="public/template_admin/css/style.min.css">
+	<!-- <link rel="stylesheet" href="public/template_admin/css/style.min.css"> -->
 	<!-- them vs -->
+	<link rel="stylesheet" type="text/css" href="public/template_admin/css/css/admin.css">
+	<link rel="stylesheet" type="text/css" href="public/template_admin/css/css/calendar.css">
+	<link rel="stylesheet" type="text/css" href="public/template_admin/css/css/contacts.css">
+	<link rel="stylesheet" type="text/css" href="public/template_admin/css/css/pipeline.css">
 	<link rel="stylesheet" type="text/css" href="public/template_admin/css/pippeline_v2/pipeline_v2.css">
   	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
